--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="gender">Gender</string>
     <string name="date_of_birth">Date of Birth</string>
     <string name="update">Update</string>
+    <string name="send">Send</string>
+    <string name="phone_number">Phone number</string>
+    <string name="enter_code">Enter code</string>
 </resources>
